sandc/test/fixtures/astRegression/shouldSucceed/productions/classItem/ClassDefaultConstructorDeclaration.sand
pub class ClassDefaultConstructorDeclaration {
    default new;
    pub default new;
    prot default new;
}