sandc/test/fixtures/astRegression/shouldFail/productions/anonymousInnerClassInstantiationExpression/ParensAfterInnerClass.sand
pub class ParensAfterInnerClass {
    foo() {
        new Foo() {
            
        }
    }
}